# rgit

./: .gitignore  Cargo.toml  README.md
src/: base.rs  data.rs  diff.rs  main.rs  remote.rs
