[package]
name = "rgit"
version = "0.1.0"
authors = ["Gonçalo Valério <gon@ovalerio.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
sha-1 = "0.9.1"
walkdir = "2"
tempfile = "3.1.0"
lazy_static = "1.4.0"
